# Electronic-Design-Competition-Weight-Detection

./: BGR_sample.cpp  CMakeLists.txt  README.md  weight-detection.cpp
